kubernetes/addons/database/redis-commander/ingress/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: redis-commander-ingress
  annotations:
    kubernetes.io/ingress.class: traefik-internal
    external-dns.alpha.kubernetes.io/target: default.internal.javiersant.com
    gethomepage.dev/enabled: "true"
    gethomepage.dev/href: "https://redis-commander.default.internal.javiersant.com"
    gethomepage.dev/description: Redis Commander Dashboard
    gethomepage.dev/group: Management
    gethomepage.dev/icon: redis.svg
    gethomepage.dev/name: Redis Dashboard
    gethomepage.dev/pod-selector: ""
    gethomepage.dev/weight: 195
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`redis-commander.default.internal.javiersant.com`)
      kind: Rule
      services:
        - kind: Service
          name: redis-commander
          port: 80
  tls:
    secretName: wildcard-javiersant-com-tls
